# splunk-mcp-rest-bridge

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  config.py  main.py  mcp_client.py
src/middleware/: __init__.py  auth_middleware.py  error_handler.py  logging_middleware.py
src/routers/: __init__.py  resources.py  tools.py
